// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`constant-value-int.django - django-verify > constant-value-int.django 1`] = `
    123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
123

`;

exports[`constant-value-string.django - django-verify > constant-value-string.django 1`] = `
  Test string
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Test string

`;

exports[`special-cases.django - django-verify > special-cases.django 1`] = `
{% if isRTL %}&#8206;{% endif %}

{% if searchResultFailing %}
<li><span><!--//--></span>No results found</li>
{% endif %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{% if isRTL %}&#8206;{% endif %}

{% if searchResultFailing %}
    <li>
        <span><!-- // --></span>No results found
    </li>
{% endif %}

`;
